Fix dark mode button visibility on all pages and use simple circle icons

--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -12,8 +12,9 @@
     cursor: pointer;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    font-size: 1.3em;
+    font-size: 1.5em;
     line-height: 1;
+    font-weight: normal;
   }
   
   span {
